Refactoring and rethinking